compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_fullwidth_at_sign.snap
---
source: compiler-core/src/parse/tests.rs
expression: "＠deprecated(\"old\")\npub fn main() { Nil }"
---
----- SOURCE CODE
＠deprecated("old")
pub fn main() { Nil }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:1
  │
1 │ ＠deprecated("old")
  │ ^^ Unexpected character

This looks like ascii at sign, but it is actually the unicode fullwidth
commercial at.
